- adapted TestSampleGenerator to java 11 version